# cell-shading

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.c
glad/src/: glad.c
src/: main.c
